syntax = "proto3";
package controller;

service Commit {
    rpc CommitSensorData (sensorData) returns (successResponse);
    rpc CommitLog(logData) returns (successResponse);
    rpc Alert(alertData) returns (successResponse);
}

message sensorData {
    bytes Data  = 1;
}

message successResponse {
    bool Success = 1;
}

message logData {
    bytes Data = 1;
}

message alertData {
    string Name = 1; 
    string Message = 2;
    int64 Time = 3;
}